projects/media/apps/radarr/base/deployment.yaml
kind: StatefulSet
apiVersion: apps/v1
metadata:
    name: radarr
    labels:
        app: radarr
spec:
    replicas: 0
    serviceName: radarr
    selector:
        matchLabels:
            app: radarr
    template:
        metadata:
            name: radarr
            labels:
                app: radarr
        spec:
            containers:
            - name: radarr
              image: ghcr.io/linuxserver/radarr:5.9.1
              resources:
                requests:
                  cpu: 100m
                  memory: 100Mi
                limits:
                  cpu: '1'
                  memory: 1Gi
              ports:
              - containerPort: 7878
                protocol: TCP

              volumeMounts:
              - mountPath: /media
                name: media
              - mountPath: /config
                name: config

            volumes:
            - name: media
              persistentVolumeClaim:
                claimName: media
            - name: config
              persistentVolumeClaim:
                claimName: radarr-config
