projects/media/apps/radarr/base/service.yaml
kind: Service
apiVersion: v1
metadata:
    name: radarr
spec:
    type: ClusterIP
    selector:
        app: radarr
    ports:
    - protocol: TCP
      name: web-interface
      port: 7878
